<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="#4d6c82"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="#4d6c82">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@string/IBConductor"
                        android:textColor="#FFF"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:padding="16dp">

                        <EditText
                            android:id="@+id/txtResultado"
                            android:layout_width="220dp"
                            android:layout_height="40dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:singleLine="true"
                            android:layout_marginRight="8dp"
                            android:textColor="#FFF" />

                        <ImageView
                            android:id="@+id/imgScan"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_icono_camera"/>

                    </RelativeLayout>
                    <Button
                        android:id="@+id/btnBuscar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp"
                        android:background="#4d6c82"
                        android:text="@string/IBBuscar"
                        android:textColor="#FFF"
                        android:textStyle="bold" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="#4d6c82"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/IVehiculo"
                    android:textSize="18sp"
                    android:textColor="#FFF"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinnerav"
                    android:layout_width="270dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    style="@android:style/Widget.Holo.Light.Spinner">
                </Spinner>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="270dp"
                    android:layout_height="55dp"
                    android:focusable="true"
                    android:textColorHint="#FFF"
                    android:layout_marginTop="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:focusableInTouchMode="true"
                    app:hintTextAppearance="@style/TextFlotante">

                    <EditText
                        android:id="@+id/txtMatricula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/VMatricula"
                        android:ems="10"
                        android:inputType="text"
                        android:textColor="#FFF"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="270dp"
                    android:layout_height="55dp"
                    android:focusable="true"
                    android:textColorHint="#FFF"
                    android:layout_marginTop="160dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:focusableInTouchMode="true"
                    app:hintTextAppearance="@style/TextFlotante">

                    <EditText
                        android:id="@+id/txtMarca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/VMarca"
                        android:ems="10"
                        android:inputType="text"
                        android:textColor="#FFF"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="270dp"
                    android:layout_height="55dp"
                    android:focusable="true"
                    android:textColorHint="#FFF"
                    android:layout_marginTop="220dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:focusableInTouchMode="true"
                    app:hintTextAppearance="@style/TextFlotante">

                    <EditText
                        android:id="@+id/txtModelo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/VModelo"
                        android:ems="10"
                        android:inputType="text"
                        android:textColor="#FFF"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="270dp"
                    android:layout_height="55dp"
                    android:focusable="true"
                    android:textColorHint="#FFF"
                    android:layout_marginTop="280dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:focusableInTouchMode="true"
                    app:hintTextAppearance="@style/TextFlotante">

                    <EditText
                        android:id="@+id/txtColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/VColor"
                        android:ems="10"
                        android:inputType="text"
                        android:textColor="#FFF"/>
                </android.support.design.widget.TextInputLayout>

            </android.support.design.card.MaterialCardView>

            <Button
                android:id="@+id/btnGu"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="GUARDAR"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rec_gradient" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>